Fixed alignment

--- a/bs4test.css
+++ b/bs4test.css
@@ -274,5 +274,5 @@ ol li {
 }
 
 .section>h1 {
-    text-align: center;
+    text-align: left !important;
 }
